feat: add Spring assertions